# AI_SRE

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data/: mock_slack_thread.json
src/: CPU_Spike.md  incident_parser.py  main.py  postmortem_generator.py  server.py  slack_source.py
tests/: test_gemini_generator.py  test_incident_parser.py  test_main.py  test_server.py  test_slack_source.py
