[project]
name = "ai-sre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "slack-sdk>=3.43.0",
    "uvicorn>=0.51.0",
]
